--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,29 @@
+nav {
+    padding: 0;
+}
+
+nav a {
+    padding: 0;
+}
+
+h1, h2 {
+    text-align: left;
+
+}
+
 main {
     max-width: 840px;
+}
+
+main img {
+    width: 100px;
+    height: auto;
 }
 
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid
+    border: 1px;
     padding: 1rem;
     background-color: #eee;
     color:#333;
