--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,20 +12,57 @@ header nav {
     color: white;
     
     
+    
 }
    
-header nav {
-    display: flex;
-    flex-direction: column;
-    gap: 1px;
+ .main-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #656279;
+    color: white;
+}
+
+
+.header-logo {
+    grid-area: logo;
     
 }
 
-header img {
-    width: 80px;
-    height: auto;
+
+    
+
+.header-nav ul {
+list-style: none;
+padding: 3px;
+margin: 0;
+display: flex;
+background-color: #c2c1c6;
+/*push navigation to the right*/
+width: max-content;
+justify-content: flex-end;
+}
+
+.header-nav li {
+    margin-left: 25px; /* space between links */
+}
+
+.header-nav a {
+    text-decoration: none;
+    color: #ff9900; 
+    font-weight: bold;
+    font-size: medium;
 }
     
+
+header img {
+    width: 100px;
+    height: auto;
+    border-radius: 5px;
+}
+   
 
 
 * {
@@ -53,12 +90,33 @@ margin:16px;
 padding: 8px;
 }
 
- .socialmedia  a {
-    text-decoration: none;
+ .main-footer {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 5px;
+    background-color: #9d9ca4;
+}
+    
+    
+
+
+.social-icons {
+    display: flex;
+    justify-content: flex-start;
+    
+}
+.social-icons-nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 1px;
+    justify-content: flex-end;
+    
     
     
 }
-
+    
 .hero {
     position: relative;
 }
@@ -84,7 +142,75 @@ h1 {
 .hero article img {
     float: right;
     width: 125px;
+    border-radius: 5px;
 }
+
+.container {
+    display:grid ;
+    grid-template-columns: repeat(4,1fr);
+    margin: 30px;
+    gap: 10px;
+    
+}
+
+.photo-box img {
+    width: 80px;
+    height: auto;
+    border-radius: 4px;
+    
+    object-fit: cover;
+}
+
+.main-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap:3px;
+}
+    
+
+
+.main-section img {
+    text-align: none;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    float: left;
+
+    width: 100px;
+    height: auto;
+    
+}
+
+.main-section p {
+  
+  
+  
+  
+  
+
+}
+    
+    
+
+ 
+
+
+    
+
+
+    
+
+    
+    
+
+    
+
+    
+    
+    
+
+
+
+
 
 
 
