--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -164,7 +164,7 @@ input,textarea {
     
 
 button {
-    background-color:skyblue;
+    background-color:black;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -181,7 +181,7 @@ list-style: none;
 padding: 3px;
 margin: 0;
 display: flex;
-background-color: whitesmoke;
+background-color: black;
 /*push navigation to the right*/
 width: max-content;
 justify-content: flex-end;
@@ -193,7 +193,7 @@ justify-content: flex-end;
 
 .header-nav a {
     text-decoration: none;
-    color: black; 
+    color:white; 
     font-weight: bold;
     font-size: medium;
 }
